src/objects/Question_Option__c.object
<CustomObject>
    <fields>
        <fullName>Question_TF__c</fullName>
        <inlineHelpText>Used in workflow. Back end field.</inlineHelpText>
        <label>Question_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>Question__r.Question_Text_TF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Questions__c</referenceTo>
        <relationshipName>QFOR_Question_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Option</label>
    <nameField>
        <label>Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>